package core.Customer.domain.Entities;

import jakarta.persistence.Entity;

@Entity
public class Customer {
}
