package core.Figure.domain.ValueObjects;

public class Description {
}
