@startuml

package "Customer " <<aggregate>> {
    class Customer <<Entity>> <<root>>{
    }

}

package "Figure " <<aggregate>> {

    class Figure <<Entity>> <<root>>{
    }

    class Code <<Value Object>>{
    }

    class Version <<Value Object>>{
    }

    enum FigureStatus <<Value Object>>{
    }

    class Keyword <<Value Object>>{
    }

    class Exclusivity <<Entity>>{
    }


    'Figure -> x
    Figure --> "1..*" Keyword: keywords
    Figure --> "0..1" Exclusivity: exclusivity
    Figure --> "1" Code: code
    Figure --> "1" Version: version
    Figure --> "1" FigureStatus: figureStatus

    'Exclusivity -> x
    Exclusivity --> "1" Customer: exclusive to
}

package "Category " <<aggregate>>{

    class Category <<Entity>> <<root>>{
    }

    'Figure -> x
    Figure --> "1..*" Category: categories
}

package "Shared" {

    class Description <<Value Object>>{
    }

    class Name <<Value Object>>{
    }

    'Category -> x
    Category --> "1" Name: name
    Category --> "1" Description: description

    'Figure -> x
    Figure ----> "1" Description: description

@enduml